--- a/src/express/templates/search.pug
+++ b/src/express/templates/search.pug
@@ -10,7 +10,15 @@ block content
       .search-page__wrapper
         h1 Поиск
         .search.search-page__form
-          form(action='#' method='get')
+          form(method="get" action="/search")
             label
-              input(type='text' placeholder='Что ищем?')
-            button.search__button.button.button--transparent(type='submit') Найти
+              input(type="text" placeholder="Что ищем?" name="query")
+            button.search__button.button.button--transparent(type="submit") Найти
+          if isAfterSearch
+            if searchResults
+              each article in searchResults
+                .search__result
+                  time.search__date(datetime='2019-03-21T20:33') #{article.createdDate}
+                  a.search__link #{article.title}
+            else
+              p.search-page__empty Ничего не нашлось
