--- a/src/express/templates/errors/500.pug
+++ b/src/express/templates/errors/500.pug
@@ -3,7 +3,8 @@ html(lang='ru')
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width,initial-scale=1')
-    meta(name='Description' content='Личный блог Типотека')
+    meta(name='description' content='Личный блог Типотека')
+    meta(http-equiv='X-UA-Compatible' content='ie=edge')
     title Типотека
     link(rel='preload' href='./fonts/Inter-Regular.woff2' as='font' crossorigin='anonymous')
     link(rel='preload' href='./fonts/Inter-Medium.woff2' as='font' crossorigin='anonymous')
@@ -28,5 +29,7 @@ html(lang='ru')
       footer.footer
         a.footer__copyright(href='#' aria-label='HTMLAcademy')
           img(src='img/icons/HTMLAcademyLogo.svg' width='112' height='50' alt='HTMLAcademy')
-        span •
-        p Типотека, 2019
+        span.footer__dot
+        p.footer__text Типотека, 2019
+    script(src='js/vendor.js')
+    script(src='js/main.js')
