--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -4,7 +4,8 @@ html(lang='ru')
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width,initial-scale=1')
-    meta(name='Description' content='Личный блог Типотека')
+    meta(name='description' content='Личный блог Типотека')
+    meta(http-equiv='X-UA-Compatible' content='ie=edge')
     title Типотека
     link(rel='preload' href='/fonts/Inter-Regular.woff2' as='font' crossorigin='anonymous')
     link(rel='preload' href='/fonts/Inter-Medium.woff2' as='font' crossorigin='anonymous')
@@ -19,7 +20,6 @@ html(lang='ru')
         include patrials/common-header.pug
       block content
       include patrials/footer.pug
-    //
-      <script src="/js/vendor.js"></script>
-      <script src="/js/main.js"></script>
+      script(src='/js/vendor.js')
+      script(src='/js/main.js')
 
