--- a/src/express/templates/new-post.pug
+++ b/src/express/templates/new-post.pug
@@ -6,10 +6,10 @@ block vars
 
 block content
   main
-    section.modal.modal--flex
-      .popup.popup--new-publication.popup--flex
+    section
+      .popup.popup--new-publication.popup--anti
         .new-publication
-          form(action='/articles/add' method='POST' enctype="multipart/form-data")
+          form(action='#' method='POST')
             .new-publication__header
               h1 Новая публикация
               .new-publication__date-form
@@ -17,33 +17,33 @@ block content
                 .new-publication__date-form-division
                   .new-publication__date-block
                     label(for='new-publication-date' aria-label='Календарь')
-                    input#new-publication-date(type='text' name='date' placeholder='21.03.2019')
+                    input#new-publication-date(type='text' name='date' placeholder='2019-03-21')
               button.new-publication__button.button.button--colored(type='submit') Опубликовать
-            button.popup__button.button.button--popup-close(type='button' aria-label='Закрыть окно')
+            a.popup__button.button.button--popup-close(aria-label='Закрыть окно')
               | Закрыть
               | окно
             .new-publication__form.form
               .form__wrapper.form__wrapper--intro
                 .form__field
                   label
-                    input(type='text' placeholder='Заголовок' required='' name='title')
+                    input(type='text' name='title' placeholder='Заголовок' required='')
                 .form__field.form__field--post-image
                   label
-                    input#image-name-field(type='text' placeholder='Фотография' readonly='' name='image-name-field')
+                    input#image-name-field(type='text' name='photo' placeholder='Фотография' readonly='')
                   .form__image-loader.form__image-loader--publication
                     label
-                      input.visually-hidden(type='file' name='cover')
+                      input.visually-hidden(type='file' name='upload')
                       | Обзор
-                each category in categories
-                  .new-publication__checkbox.new-publication__checkbox--auto
-                    input(id=category type='checkbox' name='category' value=category)
-                    label(for=category) #{category}
-                a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
+                .new-publication__category-wrapper
+                  each category in categories
+                    .new-publication__checkbox.new-publication__checkbox--auto
+                      input(id=category type='checkbox' name=category)
+                      label(for=category) #{category}
+                  a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='1' placeholder='Анонс публикации' name='announce')
+                    textarea(rows='5' name='announcement' placeholder='Анонс публикации')
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='1' placeholder='Полный текст публикации' name='fullText')
-      .modal__overlay
+                    textarea(rows='10' name='full-text' placeholder='Полный текст публикации')
