--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -88,8 +88,9 @@ block content
                   | искренне приложить усилия, чтобы разобраться — не все люди умеют выражать свои мысли.
           .comments__footer.comments__footer--user
             form(action='#' method='POST')
-              .comments__avatar.avatar
+              .avatar
                 img(src='/img/avatar-2.png' alt='аватар пользователя')
               label
-                textarea(rows='1' placeholder='Присоединиться к обсуждению')
+                textarea(rows='1' name='message' placeholder='Присоединиться к обсуждению')
               button.comments__button.button.button--colored(type='submit') Опубликовать
+            p.comments__error Сообщение не может быть пустым, напишите что-нибудь!
