--- a/src/express/templates/new-post.pug
+++ b/src/express/templates/new-post.pug
@@ -37,7 +37,7 @@ block content
                 .new-publication__category-wrapper
                   each category in categories
                     .new-publication__checkbox.new-publication__checkbox--auto
-                      input(id=category type='checkbox' name=category)
+                      input(id=category type='checkbox' name='categories')
                       label(for=category) #{category}
                   a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
               .form__wrapper.form__wrapper--text
