--- a/src/express/templates/search.pug
+++ b/src/express/templates/search.pug
@@ -3,21 +3,28 @@ extends layout.pug
 block vars
   - var wrapperClassNames='wrapper-color'
   - var isAdmin=true
+  - var searchPageClassName = 'search-page__wrapper'
+  - var searchPageEmptyClassName = 'search-page__wrapper search-page__wrapper--empty'
+  -
+    const formatDate = (dateString) => {
+      const date = new Date(dateString);
+      return date.toLocaleString();
+    }
 
 block content
   main
     section.search-page
-      .search-page__wrapper
+      div(class=(searchingTitle && !searchResults.length ? searchPageEmptyClassName : searchPageClassName ))
         h1 Поиск
         .search.search-page__form
           form(action='/search' method='get')
             label
-              input(type='text' name='title' placeholder='Что ищем?')
+              input(type='text' name='title' placeholder='Что ищем?' value=searchingTitle)
             button.search__button.button.button--transparent(type='submit') Найти
           if searchResults.length
             each article in searchResults
               .search__result
-                time.search__date(datetime='2019-03-21T20:33') #{article.createdDate}
+                time.search__date(datetime=article.createdDate) #{formatDate(article.createdDate)}
                 a.search__link #{article.title}
-          else
+          else if searchingTitle && !searchResults.length
             p.search-page__empty Ничего не нашлось
