--- a/src/express/templates/articles-by-category.pug
+++ b/src/express/templates/articles-by-category.pug
@@ -27,3 +27,5 @@ block content
               | Комментарии
               span.preview__cloud
               b.preview__comment-count #{article.comments.length}
+    if totalPagesCount > 1
+      +pagination(totalPagesCount, currentPage, 2)
