--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -11,9 +11,14 @@ html(lang='ru')
     link(rel='preload' href='/fonts/Inter-Medium.woff2' as='font' crossorigin='anonymous')
     link(rel='preload' href='/fonts/SFProDisplay-Regular.woff2' as='font' crossorigin='anonymous')
     link(rel='stylesheet' href='/css/style.min.css')
+    style.
+      .pagination__item--active a{
+        pointer-events: none;
+      }
   body
     block vars
     include mixins/date-time.pug
+    include mixins/pagination.pug
     div(class=wrapperClassNames)
       if isAdmin
         include patrials/admin-header.pug
