--- a/src/express/templates/articles-by-category.pug
+++ b/src/express/templates/articles-by-category.pug
@@ -16,9 +16,10 @@ block content
               each category in article.categories
                 li.preview__breadcrumbs-item
                   a.preview__breadcrumbs-link(href=`/articles/category/${category.id}`) #{category.name}
-            .preview__background
-              a(href=`/articles/${article.id}`)
-                img.preview__background-image(src=`/img/${article.image}` width='460' height='240' alt=article.name)
+            if article.image
+              .preview__background
+                a(href=`/articles/${article.id}`)
+                  img.preview__background-image(src=`/img/${article.image}` width='460' height='240' alt=article.name)
             +dateTime(article.createdAt)(class=`preview__time`)
             h3.preview__name
               a.preview__name-link(href=`/articles/${article.id}`) #{article.title}
