--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -25,8 +25,9 @@ block content
                   a.themes__item-link(href=`/articles/category/${category.id}`)
                     | #{category.name}
                   button.themes__remove-btn(type='button') Удалить категорию
-          .post__picture
-            img(src=`/img/${article.image}` alt=`${article.title}`)
+          if article.image
+            .post__picture
+              img(src=`/img/${article.image}` alt=`${article.title}`)
           .post__text
             h3 #{article.announce}
             p #{article.text}
