--- a/src/express/templates/sign-up.pug
+++ b/src/express/templates/sign-up.pug
@@ -13,7 +13,7 @@ block content
           | окно
         h2.popup__title Регистрация
         .popup__form.popup__form--active.form.form--register
-          form(action='#' method='get')
+          form(action='/register' method="post" enctype="multipart/form-data")
             .form__field
               label
                 input(type='email' name='email' placeholder='Электронная почта' required='')
@@ -29,11 +29,8 @@ block content
             .form__field
               label
                 input(type='password' name='repeat-password' placeholder='Повтор пароля' required='')
-            .form__validation-error
-              p.form__error-message При регистрации произошли ошибки:
-              ul.form__errors
-                li.form__error Пароль не может состоять из двух букв
-                li.form__error Фамилия не должна быть смешной
+            if validationErrors && validationErrors.length
+              +validationErrors(validationErrors)
             .form__image-loader
               a.form__avatar.avatar
                 img(src='img/icons/smile.svg' alt='аватар пользователя')
