--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -21,10 +21,7 @@ html(lang='ru')
     include mixins/pagination.pug
     include mixins/validation-errors.pug
     div(class=wrapperClassNames)
-      if isAdmin
-        include patrials/admin-header.pug
-      else
-        include patrials/common-header.pug
+      include patrials/header.pug
       block content
       include patrials/footer.pug
       script(src='/js/vendor.js')
