--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -38,21 +38,20 @@ block content
             each comment in article.comments
               li.comments__comment
                 .comments__avatar.avatar
-                  //- img(src=`/img/${comment.user.avatar}` alt=`${comment.user.firstName} ${comment.user.lastName}`)
-                  img(src=`/img/avatar-4.png` alt=`Евгений Петров`)
+                  img(src=`/img/${comment.user.avatar}` alt=`${comment.user.firstName} ${comment.user.lastName}`)
                 .comments__text
                   .comments__head
-                    //- p #{comment.user.firstName} #{comment.user.lastName} •
-                    p Евгений Петров
+                    p #{comment.user.firstName} #{comment.user.lastName} •
                     +dateTime(comment.createdAt)(class=`comments__date`)
                   p.comments__message #{comment.text}
-          .comments__footer.comments__footer--user
-            form(action=`/articles/${article.id}/comments` method='POST' enctype="application/x-www-form-urlencoded")
-              .avatar
-                img(src='/img/avatar-2.png' alt='аватар пользователя')
-              label
-                textarea(rows='1' name='text' placeholder='Присоединиться к обсуждению')
-              button.comments__button.button.button--colored(type='submit') Опубликовать
-            if validationErrors
-              each error in validationErrors
-                p.comments__error #{error}
+          if user
+            .comments__footer.comments__footer--user
+              form(action=`/articles/${article.id}/comments` method='POST' enctype="application/x-www-form-urlencoded")
+                .avatar
+                  img(src='/img/avatar-2.png' alt='аватар пользователя')
+                label
+                  textarea(rows='1' name='text' placeholder='Присоединиться к обсуждению')
+                button.comments__button.button.button--colored(type='submit') Опубликовать
+              if validationErrors
+                each error in validationErrors
+                  p.comments__error #{error}
