--- a/src/express/templates/patrials/header.pug
+++ b/src/express/templates/patrials/header.pug
@@ -17,19 +17,17 @@ header.header
         li.header__list-item
           a.header__exit(href='/logout') Выйти
     a.header__avatar.avatar
-      img(src=`/img/${user.avatar}` alt='аватар пользователя')
+      img(src=user.avatar ? `/img/${user.avatar}` : `/img/icons/smile.svg` alt='аватар пользователя')
   if user && user.isAdmin
-    button.button.button--colored.header__button-new Новая запись
+    a.button.button--colored.header__button-new(href='/articles/add') Новая запись
     .header__dropdown
       a.button.button--burger.header__burger(href='#') Открыть меню
       ul.navigation.header__navigation
         li.navigation__item
-          a(href='main.html') Пункт меню
+          a(href='/my') Публикации
         li.navigation__item
-          a(href='main.html') Пункт меню
+          a(href='/categories') Категории
         li.navigation__item
-          a(href='main.html') Пункт меню
-        li.navigation__item
-          a(href='main.html') Пункт меню
+          a(href='/my/comments') Комментарии
   a.header__search.button.button--search(href='/search' aria-label='поиск по сайту')
 
