--- a/src/express/templates/my.pug
+++ b/src/express/templates/my.pug
@@ -11,7 +11,7 @@ block content
       ul.notes__list
         each article in articles
           li.notes__list-item
-            time.notes__item-time(datetime='2019-03-21T20:33') #{article.createdDate}
-            a.notes__item-text(href='#') #{article.title}
+            +dateTime(article.createdAt)(class=`notes__item-time`)
+            a.notes__item-text(href=`/articles/edit/${article.id}`) #{article.title}
             button.notes__button.button.button--close-item(type='button')
               span.visually-hidden Закрыть строку списка
