--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -48,7 +48,7 @@ block content
             .comments__footer.comments__footer--user
               form(action=`/articles/${article.id}/comments` method='POST' enctype="application/x-www-form-urlencoded")
                 .avatar
-                  img(src='/img/avatar-2.png' alt='аватар пользователя')
+                  img(src=`/img/${user.avatar}` alt='аватар пользователя')
                 label
                   textarea(rows='1' name='text' placeholder='Присоединиться к обсуждению')
                 input(type="hidden" name="_csrf" value=csrfToken)
