--- a/src/express/templates/articles-by-category.pug
+++ b/src/express/templates/articles-by-category.pug
@@ -20,7 +20,7 @@ block content
               .preview__background
                 a(href=`/articles/${article.id}`)
                   img.preview__background-image(src=`/img/${article.image}` width='460' height='240' alt=article.name)
-            +dateTime(article.createdAt)(class=`preview__time`)
+            +date(article.createdAt)(class=`preview__time`)
             h3.preview__name
               a.preview__name-link(href=`/articles/${article.id}`) #{article.title}
             p.preview__text #{article.announce}
