--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -17,7 +17,7 @@ block content
         .post__wrapper
           .post__head
             a.post__backwards.button.button--backwards(href='#') Назад
-            +dateTime(article.createdAt)(class=`post__date`)
+            +date(article.createdAt)(class=`post__date`)
             h2.post__title.title.title--main #{article.title}
             ul.post__themes.themes
               each category in article.categories
@@ -33,17 +33,20 @@ block content
             p #{article.text}
       .post__wrapper.post__wrapper--comments
         section.post__comments.comments
-          h2.comments__title.title.title--middle Комментарии
-          ul.comments__list
-            each comment in article.comments
-              li.comments__comment
-                .comments__avatar.avatar
-                  img(src=`/img/${comment.user.avatar}` alt=`${comment.user.firstName} ${comment.user.lastName}`)
-                .comments__text
-                  .comments__head
-                    p #{comment.user.firstName} #{comment.user.lastName} •
-                    +dateTime(comment.createdAt)(class=`comments__date`)
-                  p.comments__message #{comment.text}
+          if article.comments && article.comments.length
+            h2.comments__title.title.title--middle Комментарии
+            ul.comments__list
+              each comment in article.comments
+                li.comments__comment
+                  .comments__avatar.avatar
+                    img(src=`/img/${comment.user.avatar}` alt=`${comment.user.firstName} ${comment.user.lastName}`)
+                  .comments__text
+                    .comments__head
+                      p #{comment.user.firstName} #{comment.user.lastName} •
+                      +dateTime(comment.createdAt)(class=`comments__date`)
+                    p.comments__message #{comment.text}
+          else
+            h2.comments__title.title.title--middle Комментарии отсутствуют
           if user
             .comments__footer.comments__footer--user
               form(action=`/articles/${article.id}/comments` method='POST' enctype="application/x-www-form-urlencoded")
@@ -56,3 +59,12 @@ block content
               if validationErrors
                 each error in validationErrors
                   p.comments__error #{error}
+          else
+            .comments__footer.comments__footer--visitor
+              a.comments__button.button.button--colored(href='/login') Войти
+              .comments__registration
+                p.text.text--signature
+                  b.title.title--small Регистрация
+                  | Чтобы присоединиться к
+                  |                   переписке
+                  |                   нужно зарегистрироваться
