--- a/src/express/templates/patrials/header.pug
+++ b/src/express/templates/patrials/header.pug
@@ -29,5 +29,7 @@ header.header
           a(href='/categories') Категории
         li.navigation__item
           a(href='/my/comments') Комментарии
+        li.navigation__item
+          a(href='/logout') Выйти
   a.header__search.button.button--search(href='/search' aria-label='поиск по сайту')
 
