--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -16,7 +16,7 @@ block content
         h2.visually-hidden Основное содержание
         .post__wrapper
           .post__head
-            a.post__backwards.button.button--backwards(href='#') Назад
+            a.post__backwards.button.button--backwards(href=referer) Назад
             +date(article.createdAt)(class=`post__date`)
             h2.post__title.title.title--main #{article.title}
             ul.post__themes.themes
