--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -32,4 +32,4 @@ html(lang='ru')
       include patrials/footer.pug
       script(src='/js/vendor.js')
       script(src='/js/main.js')
-
+    block scripts
