--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -67,3 +67,6 @@ block content
                 b.preview__comment-count #{article.comments.length}
       if totalPagesCount > 1
         +pagination(totalPagesCount, currentPage, 2)
+block scripts
+  script(src='https://cdn.socket.io/4.0.1/socket.io.js' defer)
+  script(src='/js/socket.js' defer)
