update client socket initialization

--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -68,5 +68,5 @@ block content
       if totalPagesCount > 1
         +pagination(totalPagesCount, currentPage, 2)
 block scripts
-  script(src='https://cdn.socket.io/4.0.1/socket.io.js' defer)
+  script(src='/socket.io/socket.io.js' defer)
   script(src='/js/socket.js' defer)
