--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -1,11 +1,11 @@
 extends layout.pug
 
 block vars
+  - const STRING_MAX_LENGTH = 100;
   - const wrapperClassNames='wrapper'
   -
     const cutString = (string) => {
-      const MAX_LENGTH = 100;
-      return string.length > MAX_LENGTH ? `${string.slice(0, MAX_LENGTH)}...` : string;
+      return string.length > STRING_MAX_LENGTH ? `${string.slice(0, STRING_MAX_LENGTH)}...` : string;
     }
 
 block content
